# filessh

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  build.rs  cliff.toml  default_settings.toml  demo2.tape
.github/workflows/: main.yml
docs/: config_man_page.md
man/: filessh.1  filessh.5
src/: cli.rs  config.rs  errors.rs  files.rs  logging.rs  main.rs  patched_line_gauge.rs  ssh.rs  tui.rs
src/cli/: definition.rs
src/par_dir_traversal/: mod.rs
src/ssh_config/: de.rs  reader.rs
src/tui/: main_ui.rs  mod.rs
